Edited description text

--- a/index.html
+++ b/index.html
@@ -265,11 +265,9 @@
 	    The voting is performed right off of Facebook. The results
 	    are gathered and stored at ChoicePost. They are also made
 	    available at Facebook through our integrated Facebook 
-	    application. Poll closing times match the corresponding
-	    real life poll booth times.
-	    Sample results would appear as shown to the right. This is
-	    an example of mocked up data for facebook user voting on 
-	    Stop Online Privacy Act (SOPA).
+	    application. Sample results would appear as shown to the 
+	    right. This is an example of mocked up data for facebook 
+	    users voting on Stop Online Privacy Act (SOPA).
 	  </p>
 	</div>
 	<div class="span5 asset">
